<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.biosemantics</groupId>
  <artifactId>codemapper</artifactId>
  <name>CodeMapper</name>
  <version>2023-10-04</version>
  <packaging>war</packaging>

  <description>Semi-automated mapping of case definitions</description>

  <scm>
      <connection>scm:https://github.com/mi-erasmusmc/comap/</connection>
  </scm>

  <properties>
    <java.version>1.8</java.version>
    <jersey.config.test.container.port>8080</jersey.config.test.container.port>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <profiles>
    <profile>
      <id>dev</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <code-mapper.properties>code-mapper-dev.properties</code-mapper.properties>
        <final.name>codemapper-dev</final.name>
        <logging.level>trace</logging.level>
      </properties>
    </profile>
    <profile>
      <id>testing</id>
      <properties>
        <code-mapper.properties>code-mapper-testing.properties</code-mapper.properties>
        <final.name>codemapper-testing</final.name>
        <logging.level>trace</logging.level>
      </properties>
    </profile>
    <profile>
      <id>production</id>
      <properties>
        <code-mapper.properties>code-mapper-production.properties</code-mapper.properties>
        <final.name>codemapper</final.name>
        <logging.level>info</logging.level>
      </properties>
    </profile>
  </profiles>

  <build>
    <finalName>${final.name}</finalName>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>**/*.properties</include>
          <include>**/*.xml</include>
        </includes>
      </resource>
      <resource>
        <directory>src/main/webapp/WEB-INF/</directory>
        <filtering>true</filtering>
        <includes>
          <include>**/*.jsp</include>
        </includes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <propertiesEncoding>UTF-8</propertiesEncoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.coderplus.maven.plugins</groupId>
        <artifactId>copy-rename-maven-plugin</artifactId>
        <version>1.0.1</version>
        <executions>
          <execution>
            <id>copy-file</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <sourceFile>${code-mapper.properties}</sourceFile>
              <destinationFile>src/main/resources/code-mapper.properties</destinationFile>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <inherited>true</inherited>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <showWarnings>false</showWarnings>
          <fork>false</fork>
        </configuration>
      </plugin>
<!--       <plugin> -->
<!--         <groupId>pl.project13.maven</groupId> -->
<!--         <artifactId>git-commit-id-plugin</artifactId> -->
<!--         <version>2.2.1</version> -->
<!--         <executions> -->
<!--           <execution> -->
<!--             <goals> -->
<!--               <goal>revision</goal> -->
<!--             </goals> -->
<!--           </execution> -->
<!--         </executions> -->
<!--       </plugin> -->
      <plugin>
        <!-- mvn jetty:run -->
        <!-- Need to disable CORS filter in web.xml -->
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-maven-plugin</artifactId>
        <version>9.2.11.v20150529</version>
        <configuration>
          <scanIntervalSeconds>10</scanIntervalSeconds>
          <webApp>
            <contextPath>/CodeMapper</contextPath>
          </webApp>
          <httpConnector>
            <port>8080</port>
          </httpConnector>
        </configuration>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.3.1</version>
          <configuration>
              <webResources>
                <resource>
                  <filtering>true</filtering>
                  <directory>src/main/webapp</directory>
                  <includes>
                    <include>META-INF/context.xml</include>
                  </includes>
                </resource>
                  <resource>
                      <directory>${project.build.sourceDirectory}</directory>
                      <targetPath>WEB-INF/classes</targetPath>
                  </resource>
              </webResources>
          </configuration>
      </plugin>
      <plugin>
        <groupId>com.coveo</groupId>
        <artifactId>fmt-maven-plugin</artifactId>
        <version>2.9</version>
        <configuration>
          <sourceDirectory>src/main/java</sourceDirectory>
          <testSourceDirectory>src/test/java</testSourceDirectory>
          <verbose>false</verbose>
          <filesNamePattern>.*\.java</filesNamePattern>
          <skip>false</skip>
          <skipSortingImports>false</skipSortingImports>
          <style>google</style>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>format</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.16.2</version>
      </plugin>
    </plugins>
  </build>

  <dependencies>

	<dependency>
	  <groupId>net.bull.javamelody</groupId>
	  <artifactId>javamelody-core</artifactId>
	  <version>1.91.0</version>
	</dependency>
	<dependency>
		<groupId>com.github.ben-manes.caffeine</groupId>
		<artifactId>caffeine</artifactId>
		<version>2.9.3</version> <!-- version < 3 for java 8 -->
	</dependency>
      <dependency>
          <groupId>javax.xml.bind</groupId>
          <artifactId>jaxb-api</artifactId>
          <version>2.3.1</version>
      </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-grizzly2-http</artifactId>
      <version>2.25.1</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-servlet</artifactId>
      <version>2.25.1</version>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>3.0.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.17.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.17.1</version>
    </dependency>
    <dependency>
	    <groupId>org.postgresql</groupId>
	    <artifactId>postgresql</artifactId>
            <version>[42.3.9,)</version>
	</dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>3.17</version>
    </dependency>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>[20231013,)</version>
    </dependency>
    <dependency>
      <groupId>com.mchange</groupId>
      <artifactId>c3p0</artifactId>
      <version>0.9.5.4</version>
    </dependency>
    <dependency>
      <groupId>com.owlike</groupId>
      <artifactId>genson</artifactId>
      <version>1.3</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson</groupId>
      <artifactId>jackson-base</artifactId>
      <version>[2.13.4.2,)</version>
      <type>pom</type>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>[2.13.4.2,)</version>
    </dependency>
    <dependency>
    	<groupId>javax.websocket</groupId>
    	<artifactId>javax.websocket-api</artifactId>
    	<version>1.1</version>
    	<scope>provided</scope>
    </dependency>
	<dependency>
	    <groupId>com.opencsv</groupId>
	    <artifactId>opencsv</artifactId>
	    <version>5.9</version>
	</dependency>
  </dependencies>
</project>
